// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload should drop file to dropzone input 1`] = `
<div>
  <div
    class="w-full"
    data-testid="file-upload"
  >
    <div
      class="mx-auto w-full flex items-center justify-start align-middle p-2 my-10"
      data-testid="uploaded-file"
    >
      <div
        class="text-center font-sans font-semibold mx-4 hover:text-blue-500"
        data-testid="uploaded-label"
      >
        Uploaded file
      </div>
      <div
        class="font-sans text-justify text-gray-600"
        data-testid="uploaded-file-details"
      >
        ping.png
         - 
        4
         bytes
      </div>
      <div
        class="pt-2 ml-2"
      >
        <button
          aria-label="Remove file"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium sc-dkPtRN cYtIRe css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          data-testid="remove-file"
          tabindex="0"
          type="button"
        >
          <svg
            class="cursor-pointer text-red-600 font-sans text-3xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm192 472c0 4.4-3.6 8-8 8H328c-4.4 0-8-3.6-8-8v-48c0-4.4 3.6-8 8-8h368c4.4 0 8 3.6 8 8v48z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload should render file upload input 1`] = `
<div>
  <div
    class="w-full"
    data-testid="file-upload"
  >
    <div
      class="block border-2 p-8 border-dashed rounded-md border-gray-400 shadow-md outline-blue-200 cursor-pointer active:bg-blue-50 hover:bg-blue-50 hover:border-blue-200 active:text-blue-500 dropzone"
      role="presentation"
      tabindex="0"
    >
      <input
        class=""
        data-testid="upload-input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="font-sans text-gray-600 text-center mx-auto hover:text-blue-500"
        data-testid="upload-message"
      >
        Drag and drop to upload the file
      </div>
      <div
        class="font-light font-sans text-gray-500 text-center text-sm italic my-2"
        data-testid="upload-size-hint"
      >
        Max upload size : 5 MB
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload should render file upload input for edit mode 1`] = `
<div>
  <div
    class="w-full"
    data-testid="file-upload"
  >
    <div
      class="mx-auto w-full flex items-center justify-start align-middle p-2 my-10"
      data-testid="uploaded-file"
    >
      <div
        class="text-center font-sans font-semibold mx-4 hover:text-blue-500"
        data-testid="uploaded-label"
      >
        Uploaded file
      </div>
      <button
        class="flex items-center justify-center gap-1 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 px-9 py-3 ml-0 break-normal text-white w-1/3 bg-blue-500"
        data-testid="download-file-1"
      >
        Download file
      </button>
      <div
        class="pt-2 ml-2"
      >
        <button
          aria-label="Remove file"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium sc-dkPtRN cYtIRe css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          data-testid="remove-file"
          tabindex="0"
          type="button"
        >
          <svg
            class="cursor-pointer text-red-600 font-sans text-3xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm192 472c0 4.4-3.6 8-8 8H328c-4.4 0-8-3.6-8-8v-48c0-4.4 3.6-8 8-8h368c4.4 0 8 3.6 8 8v48z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload should show error when file drop fails 1`] = `
<div>
  <div
    class="w-full"
    data-testid="file-upload"
  >
    <div
      class="block border-2 p-8 border-dashed rounded-md border-gray-400 shadow-md outline-blue-200 cursor-pointer active:bg-blue-50 hover:bg-blue-50 hover:border-blue-200 active:text-blue-500 dropzone"
      role="presentation"
      tabindex="0"
    >
      <input
        class=""
        data-testid="upload-input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="font-sans text-gray-600 text-center mx-auto hover:text-blue-500"
        data-testid="upload-message"
      >
        Drag and drop to upload the file
      </div>
      <div
        class="font-light font-sans text-gray-500 text-center text-sm italic my-2"
        data-testid="upload-size-hint"
      >
        Max upload size : 5 MB
      </div>
      <div
        class="font-sans text-red-500 text-center mx-auto my-2"
        data-testid="upload-error"
      >
        The file is not allowed
      </div>
    </div>
  </div>
</div>
`;
